--- a/apollo/frontend/templates/frontend/submission_list.html
+++ b/apollo/frontend/templates/frontend/submission_list.html
@@ -15,41 +15,18 @@
 </div>
 {% endif %}
 {% if perms.export_submissions.can() %}
-
-<form action="{{ request.url }}" method="get" id="export_observer_submissions" style="display:none">
-{% for key, value in request.args.items() %}
-{% if key != "export" %}<input type="hidden" name="{{ key }}" value="{{ value }}" />{% endif %}
-{% endfor %}
-<input type="hidden" name="export" value="observers" />
-</form>
-
 <div class="btn-group pull-right">
-  <a class="btn btn-default" href="javascript:document.getElementById('export_observer_submissions').submit()">{% trans %}Export{% endtrans %}</a>
+  <a class="btn btn-default" href="{{ url_for('submissions.submission_list', form_id=form.pk, export='observer', **request.args) }}">{% trans %}Export{% endtrans %}</a>
 </div>
 {% endif %}
 {% else %}
 {% if perms.export_submissions.can() %}
-
-<form action="{{ request.url }}" method="get" id="export_observer_submissions" style="display:none">
-{% for key, value in request.args.items() %}
-{% if key != "export" %}<input type="hidden" name="{{ key }}" value="{{ value }}" />{% endif %}
-{% endfor %}
-<input type="hidden" name="export" value="observers" />
-</form>
-
-<form action="{{ request.url }}" method="get" id="export_master_submissions" style="display:none">
-{% for key, value in request.args.items() %}
-{% if key != "export" %}<input type="hidden" name="{{ key }}" value="{{ value }}" />{% endif %}
-{% endfor %}
-<input type="hidden" name="export" value="master" />
-</form>
-
 <div class="btn-group pull-right">
-  <a class="btn btn-default" href="javascript:document.getElementById('export_master_submissions').submit()">{% trans %}Export{% endtrans %}</a>
+  <a class="btn btn-default" href="{{ url_for('submissions.submission_list', form_id=form.pk, export='master', **request.args) }}">{% trans %}Export{% endtrans %}</a>
   <button class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
   <ul class="dropdown-menu">
-    <li><a href="javascript:document.getElementById('export_observer_submissions').submit()">{% trans %}Observers Data{% endtrans %}</a></li>
-    <li><a href="javascript:document.getElementById('export_master_submissions').submit()">{% trans %}Master Data{% endtrans %}</a></li>
+    <li><a href="{{ url_for('submissions.submission_list', form_id=form.pk, export='observer', **request.args) }}">{% trans %}Observers Data{% endtrans %}</a></li>
+    <li><a href="{{ url_for('submissions.submission_list', form_id=form.pk, export='master', **request.args) }}">{% trans %}Master Data{% endtrans %}</a></li>
   </ul>
 </div>
 {% endif %}
