Clear button now works in dashboard and submissions templates

--- a/apollo/frontend/templates/frontend/dashboard.html
+++ b/apollo/frontend/templates/frontend/dashboard.html
@@ -8,6 +8,7 @@
 {% block scripts %}
  <script type="text/javascript" src="{{ url_for('static', filename='js/d3.v3.js') }}"></script>
  <script type="text/javascript" src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
+ <script type="text/javascript" src="{{ url_for('static', filename='js/filters.js') }}"></script>
 <script type="text/javascript">
   var time = new Date().getTime();
   
