--- a/apollo/frontend/templates/frontend/submission_filter.html
+++ b/apollo/frontend/templates/frontend/submission_filter.html
@@ -16,7 +16,7 @@
     {% endif %}
     <div class="">
       <button type="submit" class="btn btn-warning"><i class="glyphicon glyphicon-search"></i> {% trans "Filter" context "verb" %}</button>
-      <a class="btn btn-default form-reset">{% trans "Clear" context "verb" %}</a>
+      <a class="btn btn-default form-reset" id="filter_reset">{% trans "Clear" context "verb" %}</a>
     </div>
   </form>
 </div>
