--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -31,6 +31,12 @@
       display: table-row;
       height: 43px;
     }
+    .dropdown-submenu{position:relative;}
+    .dropdown-submenu>.dropdown-menu{top:0;left:100%;margin-top:-6px;margin-left:-1px;-webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px 6px;border-radius:0 6px 6px 6px;}
+    .dropdown-submenu:hover>.dropdown-menu{display:block;}
+    .dropdown-submenu>a:after{display:block;content:" ";float:right;width:0;height:0;border-color:transparent;border-style:solid;border-width:5px 0 5px 5px;border-left-color:#cccccc;margin-top:5px;margin-right:-10px;}
+    .dropdown-submenu:hover>a:after{border-left-color:#ffffff;}
+    .dropdown-submenu.pull-left{float:none;}.dropdown-submenu.pull-left>.dropdown-menu{left:-100%;margin-left:10px;-webkit-border-radius:6px 0 6px 6px;-moz-border-radius:6px 0 6px 6px;border-radius:6px 0 6px 6px;}
   </style>
   <body>
     <div class="navbar navbar-default navbar-static-top">
@@ -63,12 +69,19 @@
             {%- elif current_menu.submenu('forms.incidents').dynamic_list -%}
             <li><a href="{{ current_menu.submenu('forms.incidents').dynamic_list[0].url }}"><i class="glyphicon glyphicon-check"></i> {{ current_menu.submenu('forms.incidents').dynamic_list[0].text }}</a></li>
             {%- endif -%}
-            {%- if current_menu.submenu('analysis').visible -%}
+            {%- if perms.view_analyses.can() -%}
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans %}Analysis{% endtrans %} <b class="caret"></b></a>
               <ul class="dropdown-menu">
-              {%- for form in current_menu.submenu('analysis').dynamic_list -%}
-              <li><a href="{{ form.url }}"><i class="glyphicon glyphicon-check"></i> {{ form.text }}</a></a></li>
-              {%- endfor -%}
+              {%- if current_menu.submenu('process_analysis').dynamic_list -%}
+                <li class="dropdown-submenu">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-tasks"></i> {% trans %}Process{% endtrans %}</a>
+                  <ul class="dropdown-menu">
+                    {%- for form in current_menu.submenu('process_analysis').dynamic_list -%}
+                    <li><a href="{{ form.url }}"><i class="glyphicon glyphicon-tasks"></i> {{ form.text }}</a></a></li>
+                    {%- endfor -%}
+                  </ul>
+                </li>
+              {%- endif -%}
               </ul>
             </li>
             {%- endif -%}
