--- a/apollo/frontend/static/css/apollo.css
+++ b/apollo/frontend/static/css/apollo.css
@@ -7206,6 +7206,7 @@ table .header-fixed {
  vertical-align:middle;
  height:35px;
  text-shadow: 1px 1px 2px rgba(0,0,0,0.25); 
+ display: none;
 }
 .i_custom{vertical-align:middle;
 }
