--- a/apollo/frontend/static/css/custom.css
+++ b/apollo/frontend/static/css/custom.css
@@ -7,6 +7,7 @@
  vertical-align:middle;
  height:35px;
  text-shadow: 1px 1px 2px rgba(0,0,0,0.25); 
+ display: none;
 }
 .i_custom{vertical-align:middle;
 }
