Proper alignment of submenus and dropdowns containers in layout template

--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -23,21 +23,6 @@
 
     {% block head %}{% endblock %}
   </head>
-  <style type="text/css">
-    .navbar-nav li a {
-     line-height: 25px;
-    }
-    .navbar-header {
-      display: table-row;
-      height: 43px;
-    }
-    .dropdown-submenu{position:relative;}
-    .dropdown-submenu>.dropdown-menu{top:0;left:100%;margin-top:-6px;margin-left:-1px;-webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px 6px;border-radius:0 6px 6px 6px;}
-    .dropdown-submenu:hover>.dropdown-menu{display:block;}
-    .dropdown-submenu>a:after{display:block;content:" ";float:right;width:0;height:0;border-color:transparent;border-style:solid;border-width:5px 0 5px 5px;border-left-color:#cccccc;margin-top:5px;margin-right:-10px;}
-    .dropdown-submenu:hover>a:after{border-left-color:#ffffff;}
-    .dropdown-submenu.pull-left{float:none;}.dropdown-submenu.pull-left>.dropdown-menu{left:-100%;margin-left:10px;-webkit-border-radius:6px 0 6px 6px;-moz-border-radius:6px 0 6px 6px;border-radius:6px 0 6px 6px;}
-  </style>
   <body>
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
@@ -60,7 +45,7 @@
             {%- endif -%}
             {% if current_menu.submenu('forms.incidents').dynamic_list|count > 1 -%}
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-check"></i> {% trans %}Incidents{% endtrans %} <b class="caret"></b></a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu navbar-right">
                     {% for form in current_menu.submenu('forms.incidents').dynamic_list -%}
                     <li><a href="{{ form.url }}"><i class="glyphicon glyphicon-check"></i> {{ form.text }}</a></li>
                     {%- endfor %}
