--- a/apollo/frontend/templates/frontend/macros/dashboard_filter.html
+++ b/apollo/frontend/templates/frontend/macros/dashboard_filter.html
@@ -2,9 +2,17 @@
 <form class="form-inline" action="{{ request.url }}" method="GET" accept-charset="utf-8" id="filter">
 <div class="form-group">
     {{ filter_form.sample(class_='form-control span2 input-sm') }}
+</div>
+<div class="form-group">
     {{ filter_form.checklist_form(class_='form-control span2 input-sm') }}
+</div>
+<div class="form-group">
     {{ filter_form.location(class_='select2-container span4 input-xlarge select2') }}
+</div>
+<div class="form-group">
 	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans %}Filter{% endtrans %}</button>
+</div>
+<div class="form-group">
 	<a class="btn btn-default btn-sm" id="filter_reset">{% trans %}Reset{% endtrans %}</a>
 </div>
 </form>
