--- a/apollo/frontend/templates/frontend/macros/participant_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/participant_list_filter.html
@@ -20,6 +20,8 @@
 </div>
 <div class="form-group">
 	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> Filter</button>
+</div>
+<div class="form-group">
 	<a class="btn btn-default btn-sm" id="filter_reset">Clear</a>
 </div>
 </form>
