--- a/apollo/frontend/templates/frontend/macros/submission_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_filter.html
@@ -23,7 +23,9 @@
 {%- endif -%}
 <div class="form-group">
 	<button class="btn btn-warning btn-sm btn-custom" type="submit"><i class="glyphicon glyphicon-search"></i> Filter</button>
-	<a class="btn btn-default btn-sm" id="filter_reset">Clear</a>
+</div>
+<div class="form-group">
+    <a class="btn btn-default btn-sm" id="filter_reset">Clear</a>
 </div>
 </form>
 {% endmacro %}
