--- a/apollo/frontend/templates/frontend/macros/send_message.html
+++ b/apollo/frontend/templates/frontend/macros/send_message.html
@@ -1,18 +1,18 @@
-{% load i18n %}
+{% macro send_message_modal(recipients) %}
 <div class="modal fade" id="send_message" style="display:none" tabindex="-1" role="dialog" aria-labelledby="send_message_label" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="send_message_label">{% trans "Send Message" %}</h3>
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3 id="send_message_label">{% trans %}Send Message{% endtrans %}</h3>
       </div>
       <div class="modal-body">
         <div class="alert" id="alert" style="display:none">
           <button type="button" class="close" data-dismiss="alert">×</button>
           <span id="alert_message"></span>
         </div>
-        <p><strong>{% trans "To" %}:</strong> {% blocktrans count counter=recipients %}{{ counter }} recipient{% plural %}{{ counter }} recipients{% endblocktrans %}.</p>
-        <p><textarea id="message" rows="5" cols="40" style="width:97.5%" class="form-control"></textarea><br /><span id="characters">0 {% trans "characters" %}</span> · <span id="parts">1 {% trans "message part" %}</span></p>
+        <p><strong>{% trans %}To{% endtrans %}:</strong> {% trans counter=recipients %}{{ counter }} recipient{% pluralize %}{{ counter }} recipients{% endtrans %}.</p>
+        <p><textarea id="message" rows="5" cols="40" style="width:97.5%" class="form-control"></textarea><br /><span id="characters">0 {% trans %}characters{% endtrans %}</span> · <span id="parts">1 {% trans %}message part{% endtrans %}</span></p>
       </div>
       <div class="modal-footer">
         <div id="loader" class="ajax_loader" style="visibility: hidden">
@@ -20,8 +20,8 @@
           <div class="ajax_loader_block block_2"></div>
           <div class="ajax_loader_block block_3"></div>
         </div>
-        <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">{% trans "Cancel" context "verb" %}</button>
-        <button class="btn btn-primary" id="send" {% if not recipients %}disabled="disabled"{% endif %}>{% trans "Send" context "verb" %}</button>
+        <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">{% trans %}Cancel{% endtrans %}</button>
+        <button class="btn btn-primary" id="send" {% if not recipients %}disabled="disabled"{% endif %}>{% trans %}Send{% endtrans %}</button>
       </div>
     </div>
   </div>
@@ -43,15 +43,15 @@
     parts = message.length <= 160 ? 1 : Math.ceil(message.length / 153);
 
     $('#message').val(message);
-    $('#characters').html(message.length > 1 ? message.length + ' ' + '{% trans "characters" context "number of characters in sentence" %}' : message.length + ' ' + '{% trans "character" context "number of characters in sentence" %}');
-    $('#parts').html(parts > 1 ? parts + ' ' + '{% trans "message parts" %}' : parts + ' ' + '{% trans "message part" %}');
+    $('#characters').html(message.length > 1 ? message.length + ' ' + '{% trans %}characters{% endtrans %}' : message.length + ' ' + '{% trans %}character{% endtrans %}');
+    $('#parts').html(parts > 1 ? parts + ' ' + '{% trans %}message parts{% endtrans %}' : parts + ' ' + '{% trans %}message part{% endtrans %}');
   });
 
   $("#send").click(function () {
     var message = $('#message').val();
     if (message) {
       $.ajax({
-        url: "{{ request.get_full_path }}",
+        url: "{{ request.url }}",
         type: 'POST',
         data: {message: message, action: 'send_message'},
         beforeSend: function (xhr) {
@@ -64,7 +64,7 @@
         // Reset message textbox, display the status and hide the dialog
         $('#message').val("");
         $('#message').trigger('keyup');
-        $('#alert_message').html('<strong>{% trans "Success" %}!</strong> {% trans "Your message has been sent" %}.');
+        $('#alert_message').html('<strong>{% trans %}Success{% endtrans %}!</strong> {% trans %}Your message has been sent{% endtrans %}.');
         $('#alert').removeClass('alert-error');
         $('#alert').addClass('alert-success');
         $('#alert').fadeIn('fast');
@@ -73,7 +73,7 @@
       })
       .fail(function (){
         // Display the fail message if the request failed
-        $('#alert_message').html('<strong>{% trans "Error" %}!</strong> {% trans "Please try sending again" %}.');
+        $('#alert_message').html('<strong>{% trans %}Error{% endtrans %}!</strong> {% trans %}Please try sending again{% endtrans %}.');
         $('#alert').removeClass('alert-success');
         $('#alert').addClass('alert-error');
         $('#alert').fadeIn('fast');
@@ -88,3 +88,4 @@
     }
   });
 </script>
+{% endmacro %}
