--- a/apollo/frontend/static/css/custom.css
+++ b/apollo/frontend/static/css/custom.css
@@ -1,7 +1,20 @@
+.modal-content{
+  font-size: 14px;
+}
+.modal-header {
+  padding: 9px 15px;
+}
+.modal-body {
+  padding: 15px;
+}
+.modal-footer{
+  margin-top:0px;
+}
 .navbar-right .dropdown-menu {
  left: 0;
 right: auto;
 }
+.btn-modal{font-size: 14px}
 .navbar-nav li a {
      line-height: 25px;
     }
