--- a/apollo/frontend/templates/frontend/macros/send_message.html
+++ b/apollo/frontend/templates/frontend/macros/send_message.html
@@ -20,8 +20,8 @@
           <div class="ajax_loader_block block_2"></div>
           <div class="ajax_loader_block block_3"></div>
         </div>
-        <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">{% trans %}Cancel{% endtrans %}</button>
-        <button class="btn btn-primary" id="send" {% if not recipients %}disabled="disabled"{% endif %}>{% trans %}Send{% endtrans %}</button>
+        <button class="btn btn-default btn-modal" data-dismiss="modal" aria-hidden="true">{% trans %}Cancel{% endtrans %}</button>
+        <button class="btn btn-primary btn-modal" id="send" {% if not recipients %}disabled="disabled"{% endif %}>{% trans %}Send{% endtrans %}</button>
       </div>
     </div>
   </div>
