--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -55,14 +55,14 @@
             <li><a href="{{ current_menu.submenu('forms.incidents').dynamic_list[0].url }}"><i class="glyphicon glyphicon-check"></i> {{ current_menu.submenu('forms.incidents').dynamic_list[0].text }}</a></li>
             {%- endif -%}
             {%- if perms.view_analyses.can() -%}
-            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans %}Analysis{% endtrans %} <b class="caret"></b></a>
+            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-stats"></i> {% trans %}Analyses{% endtrans %} <b class="caret"></b></a>
               <ul class="dropdown-menu">
               {%- if current_menu.submenu('process_analysis').dynamic_list -%}
-                <li class="dropdown-submenu">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-tasks"></i> {% trans %}Process{% endtrans %}</a>
+                <li class="dropdown-submenu"> 
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-stats"></i> {% trans %}Process{% endtrans %}</a>
                   <ul class="dropdown-menu">
                     {%- for form in current_menu.submenu('process_analysis').dynamic_list -%}
-                    <li><a href="{{ form.url }}"><i class="glyphicon glyphicon-tasks"></i> {{ form.text }}</a></a></li>
+                    <li><a href="{{ form.url }}"><i class="glyphicon glyphicon-stats"></i></i> {{ form.text }}</a></a></li>
                     {%- endfor -%}
                   </ul>
                 </li>
@@ -85,10 +85,11 @@
                 <li class="divider"></li>
               {%- endif -%}
               {%- if current_menu.submenu('locations_builder').visible -%}
-                <li><a href="{{ current_menu.submenu('locations_builder').url }}">{{ current_menu.submenu('locations_builder').text }}</a></li>
+                <li role="presentation" class="dropdown-header"><i class="glyphicon glyphicon-cog"></i> Admin Tools</li>
+                <li><a href="{{ current_menu.submenu('locations_builder').url }}"><i class="glyphicon glyphicon-map-marker"></i> {{ current_menu.submenu('locations_builder').text }}</a></li>
               {%- endif -%}
               {%- if current_menu.submenu('formbuilder').visible -%}
-                <li><a href="{{ current_menu.submenu('formbuilder').url }}">{{ current_menu.submenu('formbuilder').text }}</a></li>
+                <li><a href="{{ current_menu.submenu('formbuilder').url }}"><i class="glyphicon glyphicon-list-alt"></i> {{ current_menu.submenu('formbuilder').text }}</a></li>
               {%- endif -%}
               {%- if current_menu.submenu('locations_builder').visible or current_menu.submenu('formbuilder').visible -%}
                 <li class="divider"></li>
