--- a/apollo/frontend/templates/frontend/location_builder.html
+++ b/apollo/frontend/templates/frontend/location_builder.html
@@ -4,7 +4,10 @@
 {% endblock %}
 {% block toolbar %}
 <div class="btn-group pull-right">
-  <button style="margin-left:1em" type="button" class="btn btn-primary" id="save">{% trans %}Save{% endtrans %}</button>
+<form id="save_form" method="POST" action="{{ request.url }}">
+  <input type="hidden" name="divisions_graph" id="divisions_graph" value="" />
+  <button style="margin-left:1em" type="submit" class="btn btn-primary" id="save">{% trans %}Save{% endtrans %}</button>
+</form>
 </div>
 <div class="btn-group pull-right">
   <button style="margin-left:1em" type="button" class="btn btn-default" id="addDivisionModalButton">{% trans %}Add Division{% endtrans %}</button>
@@ -29,7 +32,7 @@
           <div class="form-group">
             <label for="parents" class="col-sm-2 control-label">{% trans %}Parents{% endtrans %}</label>
             <div class="col-sm-10">
-              <select multiple="multiple" class="form-control select2" name="parents" id="addDivisionParents">
+              <select multiple="multiple" class="form-control" name="parents" id="addDivisionParents">
               </select>
             </div>
           </div>
@@ -60,7 +63,7 @@
           <div class="form-group">
             <label for="parents" class="col-sm-2 control-label">{% trans %}Parents{% endtrans %}</label>
             <div class="col-sm-10">
-              <select multiple="multiple" class="form-control select2" name="parents" id="updateDivisionParents">
+              <select multiple="multiple" class="form-control" name="parents" id="updateDivisionParents">
               </select>
               <input type="hidden" class="form-control" id="updateDivisionId" name="id">
             </div>
@@ -75,218 +78,27 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+{%- set flash_msgs = get_flashed_messages(category_filter=['locations_builder']) -%}
+{%- if flash_msgs -%}
+<div class="row">
+  <div class="col-md-12">
+{%- for msg in flash_msgs -%}
+    <div class="alert alert-info alert-dismissable">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      {{ msg|safe }}
+    </div>
+{%- endfor -%}
+  </div>
+</div>
+{%- endif -%}
 <div class="row">
   <div class="col-md-10 col-md-offset-2">
-    <div id="paper" style="margin-top: 5em"></div>
+    <div id="paper" style="margin-top: 5em" data-graph="{{ g.deployment.administrative_divisions_graph }}"></div>
   </div>
 </div>
 {% endblock %}
 {% block scripts %}
 <script type="text/javascript" src="{{ url_for('static', filename='js/joint.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/joint.layout.DirectedGraph.min.js') }}"></script>
-<script type="text/javascript">
-  $('.select2').select2();
-
-  function makeElement(label) {
-      var maxLineLength = _.max(label.split('\n'), function(l) { return l.length; }).length;
-
-      // Compute width/height of the rectangle based on the number 
-      // of lines in the label and the letter size. 0.6 * letterSize is
-      // an approximation of the monospace font letter width.
-      var letterSize = 12;
-      var width = 2 * (letterSize * (0.6 * maxLineLength + 1));
-      var height = 2 * ((label.split('\n').length + 1) * letterSize);
-
-      return new joint.shapes.basic.Rect({
-          id: label,
-          size: { width: width, height: height },
-          attrs: {
-              text: { text: label, 'font-size': letterSize, 'font-family': "'Helvetica Neue', Helvetica, Arial, sans-serif" },
-              rect: {
-                  width: width, height: height,
-                  rx: 5, ry: 5,
-                  stroke: '#555',
-              }
-          }
-      });
-  }
-
-  function makeLink(parentElementLabel, childElementLabel) {
-      return new joint.dia.Link({
-          source: { id: parentElementLabel },
-          target: { id: childElementLabel },
-          attrs: { '.marker-target': { d: 'M 8 0 L 0 4 L 8 8 z' } },
-          smooth: true
-      });
-  }
-
-  function getChildren(element_id) {
-    var childLinks = _.filter(graph.getLinks(), function (link) {
-      return link.get('source').id == element_id
-    });
-    return _.map(_.filter(childLinks, function (child) { return child.get('target').id != undefined; }),
-      function (link) { return link.get('target').id; });
-  }
-
-  function getParents(element_id) {
-    var parentLinks = _.filter(graph.getLinks(), function (link) {
-      return link.get('target').id == element_id
-    });
-    return _.map(_.filter(parentLinks, function (child) { return child.get('source').id != undefined; }),
-      function (link) { return link.get('source').id; });
-  }
-
-  $('#addDivisionModalButton').click(function (ev) {
-    $('#addDivisionName').val('');
-    $('#addDivisionParents').select2('val', '');
-
-    var $el = $('#addDivisionParents');
-    $el.empty();
-    $.each(graph.getElements(), function(k, v) {
-      $el.append($("<option></option>")
-        .attr("value", v.id).text(v.id));
-    });
-    $('#addDivision').modal('show');
-  });
-
-  $('#addDivisionAddButton').click(function (ev) {
-    var name = $('#addDivisionName').val();
-    var parents = $('#addDivisionParents').val();
-
-    if (name && !_.find(graph.getElements(), function(elem) { return elem.id == name})) {
-      var cells = [];
-      cells.push(makeElement(name));
-      
-      _.each(parents, function(parent) {
-        cells.push(makeLink(parent, name));
-      });
-
-      graph.addCells(cells);
-    }
-
-    joint.layout.DirectedGraph.layout(graph, { 
-      setLinkVertices: false,
-      nodeSep: 50,
-      edgeSep: 80,
-      rankDir: 'BT' });
-
-    $('#addDivision').modal('hide');
-    return false;
-  });
-
-  $('#updateDivisionDeleteButton').click(function (ev) {
-    var element_id = $('#updateDivisionName').val();
-
-    if (element_id && graph.getCell(element_id) != undefined) {
-      parents = getParents(element_id);
-      children = getChildren(element_id);
-
-      graph.getCell(element_id).remove();
-
-      new_links = [];
-
-      _.each(parents, function (parent) {
-        _.each(children, function (child) {
-          new_links.push(makeLink(parent, child));
-        });
-      });
-
-      graph.addCells(new_links);
-    }
-
-    $('#updateDivision').modal('hide');
-  });
-
-  $('#updateDivisionUpdateButton').click(function (ev) {
-    var element_id = $('#updateDivisionId').val();
-    var label = $('#updateDivisionName').val();
-    var parents = $('#updateDivisionParents').val();
-
-    if (element_id && graph.getCell(element_id) != undefined) {
-      var element = graph.getCell(element_id);
-      element.get('attrs').text.text = label;
-
-      var maxLineLength = _.max(label.split('\n'), function(l) { return l.length; }).length;
-      var letterSize = 12;
-      var width = 2 * (letterSize * (0.6 * maxLineLength + 1));
-      var height = 2 * ((label.split('\n').length + 1) * letterSize);
-
-      element.resize(width, height);
-      element.trigger('change:attrs', element);
-
-      _.each(_.filter(graph.getLinks(), function (link) {
-        return link.get('target').id == element_id
-      }), function (link) { link.remove(); });
-
-      var new_links = [];
-      _.each(parents, function (parent) { new_links.push(makeLink(parent, element_id))});
-
-      graph.addCells(new_links);
-    }
-
-    $('#updateDivision').modal('hide');
-    return false;
-  });
-</script>
-<script type="text/javascript">
-  var graph = new joint.dia.Graph;
-  var paper = new joint.dia.Paper({
-      el: $('#paper'),
-      width: $('#paper').width(),
-      height: 1000,
-      gridSize: 1,
-      model: graph
-  });
-
-  var elements = [];
-  var links = [];
-  var myvar;
-
-  elements.push(makeElement('Polling Station'));
-  elements.push(makeElement('Ward'));
-  elements.push(makeElement('LGA'));
-  elements.push(makeElement('Senatorial District'));
-  elements.push(makeElement('State'));
-  elements.push(makeElement('Zone'));
-  elements.push(makeElement('Country'));
-
-  links.push(makeLink('Country', 'Zone'));
-  links.push(makeLink('Zone', 'State'));
-  links.push(makeLink('State', 'Senatorial District'));
-  links.push(makeLink('Senatorial District', 'LGA'));
-  links.push(makeLink('LGA', 'Ward'));
-  links.push(makeLink('Ward', 'Polling Station'));
-
-  cells = elements.concat(links);
-
-  graph.resetCells(cells);
-
-  joint.layout.DirectedGraph.layout(graph, { 
-    setLinkVertices: false,
-    nodeSep: 50,
-    edgeSep: 80,
-    rankDir: 'BT' });
-
-  paper.on('cell:pointerdblclick', 
-      function(cellView, evt, x, y) {
-          $('#updateDivisionName').val(cellView.model.get('attrs').text.text);
-          $('#updateDivisionId').val(cellView.model.id);
-
-          $('#updateDivisionParents').empty();
-
-          var parents = [];
-          parents.push(cellView.model.id); // add the current element to the list
-
-          var $el = $('#updateDivisionParents');
-          $el.empty();
-          $.each(_.filter(graph.getElements(), function(el) { return !_.contains(parents, el.id) }), function(k, v) {
-            var option = $("<option></option>").attr("value", v.id).text(v.id);
-            $el.append(option);
-          });
-
-          $('#updateDivisionParents').select2('val', getParents(cellView.model.id));
-          $('#updateDivision').modal('show');
-      }
-  );
-</script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/locations_builder.js') }}"></script>
 {% endblock %}
