--- a/apollo/frontend/templates/frontend/macros/participant_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/participant_list_filter.html
@@ -18,6 +18,9 @@
 <div class="form-group">
 {{ form.partner(class_='form-control span3 input-sm') }}
 </div>
+<div  class="form-group">
+{{ form.group(class_='form-control span3 input-sm') }}
+</div>
 <div class="form-group">
 	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> Filter</button>
 </div>
