--- a/apollo/frontend/templates/frontend/participant_list.html
+++ b/apollo/frontend/templates/frontend/participant_list.html
@@ -74,7 +74,14 @@
                {%- endif -%}
              </tr>
              {% else %}
-             <!-- no data -->
+             {%- if perms.edit_participant.can() -%}
+             {%- set colspan = 8 + (location_types|length) -%}
+             {%- else -%}
+             {%- set colspan = 7 + (location_types|length) -%}
+             {%- endif -%}
+             <tr class="warning">
+               <td class="text-center" colspan="{{ colspan }}">{% trans %}No Data Available{% endtrans %}</td>
+             </tr>
              {% endfor %}
            </tbody>
           </table>
