--- a/apollo/frontend/templates/frontend/location_list.html
+++ b/apollo/frontend/templates/frontend/location_list.html
@@ -1,39 +1,57 @@
-{% extends "core/layout.html" %}{% load apollo %}{% load bootstrap_pagination %}{% load i18n %}
+{%- extends 'frontend/_layout.html' -%}
+{%- from 'frontend/macros/locations_list_filter.html' import render_filter_form -%}
+{%- from 'frontend/macros/pagination.html' import render_pager -%}
+{% block toolbar %}
+  {%- if perms.export_locations.can() -%}
+  <a class="btn btn-default pull-right" href="{{ url_for('locations.locations_list', export='true', **request.args) }}">{% trans %}Export{% endtrans %}</a>
+  {%- endif -%}
+  {%- if perms.import_locations.can() -%}
+  <a class="btn btn-info pull-right" href="{{ url_for('locations.locations_import') }}" style="margin-right:1em;"><i class="glyphicon glyphicon-upload glyphicon-white"></i> {% trans %}Import Locations{% endtrans %}</a>
+  {%- endif -%}
+{% endblock %}
 {% block content %}
-<div class="row">
-  <div class="span12">
-    <div class="well" style="padding-bottom:0">
-      <form action="{% url locations_list %}" method="get" id="filter">
-        <div class="controls controls-row">
-          {{ filter_form.name }}
-          {{ filter_form.type }}
-          <button type="submit" style="margin-left:1em" class="btn btn-warning"><i class="icon-search icon-white"></i> {% trans "Search" context "verb" %}</button> <a class="btn form-reset" style="margin-left:0.5em">{% trans "Clear" context "verb" %}</a>
-        </div>
-      </form>
-    </div>
+<div class="row-fluid">
+  <div class="well well-sm">
+    {{ render_filter_form(filter_form) }}
   </div>
 </div>
-
-<div class="row">
-  <div class="span12">
+{%- set flash_msgs = get_flashed_messages(category_filter=['locations']) -%}
+{%- if flash_msgs -%}
+<div class="row-fluid">
+  <div>
+    {%- for msg in flash_msgs -%}
+    <div class="alert alert-info alert-dismissable">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      {{ msg }}
+    </div>
+    {%- endfor -%}
+  </div>
+</div>
+{%- endif -%}
+<div class="row-fluid">
+  <div>
     <table class="table table-striped table-bordered table-hover">
       <thead>
         <tr>
-          <th>{% trans "ID" %}</th>
-          <th>{% trans "Code" %}</th>
-          <th>{% trans "Name" %}</th>
-          <th>{% trans "Type" %}</th>
-          <th></th>
+          <th class="shrink" width="1px"><input type="checkbox" class="checked" id="select_all" name="select_all"></th>
+          <th class="shrink" width="1px">{% trans %}Code{% endtrans %}</th>
+          <th>{% trans %}Name{% endtrans %}</th>
+          <th class="shrink">{% trans %}Type{% endtrans %}</th>
+          <th class="text-center shrink" width="1px">{% trans %}Edit{% endtrans %}</th>
         </tr>
       </thead>
       <tbody>
-        {% for location in locations %}
+        {% for location in locations.items %}
         <tr>
-          <td>{{ location.pk }}</td>
-          <td>{{ location.code|default_if_none:"&nbsp;" }}</td>
-          <td>{{ location.name|default_if_none:"&nbsp;" }}</td>
-          <td>{{ location.type }}</td>
-          <td style="text-align:center"><a href="{% url location_edit location.pk %}">{% trans "Edit" context "verb" %}</a></td>
+          <td class="shrink"><input type="checkbox" class="checked" name="ids" value="{{ location.id }}"></td>
+          <td class="shrink">{{ location.code }}</td>
+          <td>{{ location.name }}</td>
+          <td class="shrink">{{ location.location_type }}</td>
+          <td class="text-center shrink"><a href="{{ url_for('locations.location_edit', pk=location.id) }}">{% trans %}Edit{% endtrans %}</a></td>
+        </tr>
+        {% else %}
+        <tr class="warning">
+          <td class="text-center" colspan="5">{% trans %}No Data Available{% endtrans %}</td>
         </tr>
         {% endfor %}
       </tbody>
@@ -41,8 +59,8 @@
   </div>
 </div>
 <div class="row">
-  <div class="span12">
-    {% bootstrap_paginate page_obj range=10 show_first_last="true" %}
+  <div class="col-md-12">
+    {{ render_pager(locations, 'locations.locations_list', args) }}
   </div>
 </div>
 {% endblock %}
