--- a/apollo/frontend/templates/frontend/participant_headers.html
+++ b/apollo/frontend/templates/frontend/participant_headers.html
@@ -1,5 +1,19 @@
-{% extends 'frontend/_layout.html' %}{% from 'frontend/macros/participant_header_form.html' import render_mapping_form %}{% block content %}<div class="row">
-<div class="col-md-4 col-md-offset-4">
-{{ render_mapping_form(form) }}
-</div>
-</div>{% endblock %}
+{% extends 'frontend/_layout.html' %}{% from 'frontend/macros/participant_header_form.html' import render_mapping_form %}
+{% block stylesheets %}
+	<style type="text/css">
+		.panel{margin-top: 2em;}
+		.panel-heading{padding: 4px 15px;}
+		.panel-body{padding: 5px 8px; padding-top: 1.2em;}
+		h3{font-size: 18px;}
+		.form-inline .form-group{padding-bottom: .6em;}
+		.form-inline .form-group label{width: 120px ; text-align: right; padding-right: 1em;}
+		.form-group-custom{padding-left:10.2em; padding-top:.6em;}
+	</style>
+{% endblock %}
+{% block content %}
+	<div class="row">
+		<div class="col-md-4 col-md-offset-4">
+		{{ render_mapping_form(form) }}
+		</div>
+	</div>
+{% endblock %}
