--- a/apollo/frontend/templates/frontend/participant_import.html
+++ b/apollo/frontend/templates/frontend/participant_import.html
@@ -1,5 +1,27 @@
-{% extends 'frontend/_layout.html' %}{% from 'frontend/macros/participant_import_form.html' import render_import_form %}{% block content %}<div class="row">
-<div class="col-md-4 col-md-offset-4">
-{{ render_import_form(form) }}
-</div>
-</div>{% endblock %}
+{% extends 'frontend/_layout.html' %}{% from 'frontend/macros/participant_import_form.html' import render_import_form %}
+{% block stylesheets %}
+	<style type="text/css">
+		h3{font-size: 18px;}
+		.panel{margin-top: 2em;}
+		.panel-heading{padding: 4px 15px;}
+		.panel-body{padding:20px;}
+		form{margin-top: 1em; margin-bottom: 1em;}
+		#event{margin-left: 1.7em;}
+		#spreadsheet{padding-left:.5em; display: inline-block; margin-top: 1.5em;}
+		.form-group-custom{display:block; margin-left:4.9em; margin-top:1.5em;}
+	</style>
+{% endblock %}
+{% block content %}
+	<div class="row">
+		<div class="col-md-4 col-md-offset-4">
+		{{ render_import_form(form) }}
+		</div>
+	</div>
+{% endblock %}
+{%- block scripts -%}
+<script type="text/javascript">
+$(function(){
+	$( "#spreadsheet" ).removeClass( "form-control" ).addClass( "upload" );
+});
+</script>
+{% endblock %}
