Adjustments to participants import components

--- a/apollo/frontend/templates/frontend/participant_import.html
+++ b/apollo/frontend/templates/frontend/participant_import.html
@@ -6,9 +6,10 @@
 		.panel-heading{padding: 4px 15px;}
 		.panel-body{padding:20px;}
 		form{margin-top: 1em; margin-bottom: 1em;}
-		#event{margin-left: 1.7em;}
-		#spreadsheet{padding-left:.5em; display: inline-block; margin-top: 1.5em;}
-		.form-group-custom{display:block; margin-left:4.9em; margin-top:1.5em;}
+		#event{margin-left: 1.2em;}
+		#spreadsheet{margin-left:.34em; display: inline-block; margin-top: 1.5em;}
+		.form-group-custom{display:block; margin-left:6.45em; margin-top:1.5em;}
+		.form-inline .form-group label{width: 60px ; text-align: right; padding-right: ;}
 	</style>
 {% endblock %}
 {% block content %}
