--- a/apollo/frontend/templates/frontend/macros/participant_import_form.html
+++ b/apollo/frontend/templates/frontend/macros/participant_import_form.html
@@ -1,7 +1,7 @@
 {% macro render_import_form(form) %}
 <div class="panel panel-default">
 	<div class="panel-heading">
-		<h3>{% trans %}Import participants{% endtrans %}</h3>
+		<h3>{% trans %}Step 1 - Select File{% endtrans %}</h3>
 	</div>
 	  <div class="panel-body">
 		<form class="form-inline" enctype="multipart/form-data" method="POST">
