--- a/apollo/frontend/templates/frontend/participant_list.html
+++ b/apollo/frontend/templates/frontend/participant_list.html
@@ -62,7 +62,7 @@
                <td><input type="checkbox" class="checked" name="ids" value="{{ participant.id }}"></td>
                <td>{{ participant.participant_id }}</td>
                {%- for location_type in location_types -%}
-               <td>{{ participant.location.ancestor(location_type.name).name }}</td>
+               <td>{{ participant.location_name_path[location_type.name] }}</td>
                {%- endfor -%}
                <td>{{ participant.location|default('N/A', true) }}</td>
                <td>{{ participant.name }}</td>
