--- a/apollo/frontend/templates/frontend/macros/participant_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/participant_list_filter.html
@@ -1,10 +1,10 @@
 {% macro render_filter_form(form) %}
 <form class="form-inline">
 <div class="form-group">
-{{ form.participant_id(class_='form-control span3 input-sm', placeholder='Participant ID') }}
+{{ form.participant_id(class_='form-control span3 input-sm', placeholder=_('Participant ID')) }}
 </div>
 <div class="form-group">
-{{ form.name(class_='form-control span3 input-sm', placeholder='Name') }}
+{{ form.name(class_='form-control span3 input-sm', placeholder=_('Name')) }}
 </div>
 <div class="form-group">
 {{ form.location(class_='select2-container span3 select2') }}
@@ -19,7 +19,7 @@
 {{ form.partner(class_='form-control span3 input-sm') }}
 </div>
 <div  class="form-group">
-{{ form.group(class_='select2-container span3 select2', placeholder='Groups') }}
+{{ form.group(class_='select2-container span3 select2', style='height:28px', placeholder=_('All Groups')) }}
 </div>
 <div class="form-group">
 	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> Filter</button>
