specify minimum width for filter buttons

--- a/apollo/frontend/templates/frontend/dashboard.html
+++ b/apollo/frontend/templates/frontend/dashboard.html
@@ -33,7 +33,7 @@
 {% block content %}
 <div class="row">
   <div class="col-md-12">
-      <div class="well well-sm">
+      <div class="well well-sm filter">
           {{ render_filter_form(filter_form)}}
       </div>
   </div>
