--- a/apollo/frontend/templates/frontend/macros/pagination.html
+++ b/apollo/frontend/templates/frontend/macros/pagination.html
@@ -25,3 +25,20 @@
 </div>
 {% endif %}
 {% endmacro %}
+
+{% macro render_pager_counter(pager, args) %}
+{%- set start = (pager.page - 1) * pager.per_page + 1 -%}
+{%- if (pager.page * pager.per_page) > pager.total %}
+{%- set end = pager.total -%}
+{%- else -%}
+{%- set end = pager.page * pager.per_page -%}
+{%- endif -%}
+{%- set total = pager.total -%}
+{% if total %}
+<div class="text-center">
+<ul class="pagination pagination-centered" style="margin:-10px 0 5px 0;">
+<li class="disabled"><a>{% trans %}Showing <strong>{{ start }}-{{ end }}</strong> of <strong>{{ total }}</strong>{% endtrans %}</a></li>
+</ul>
+</div>
+{% endif %}
+{% endmacro %}
