--- a/apollo/frontend/templates/frontend/message_list.html
+++ b/apollo/frontend/templates/frontend/message_list.html
@@ -1,5 +1,5 @@
 {% extends "frontend/_layout.html" %}
-{%- from 'frontend/macros/pagination.html' import render_pager -%}
+{%- from 'frontend/macros/pagination.html' import render_pager, render_pager_counter -%}
 {% block toolbar %}
 {% if perms.export_messages.can() %}
 <a class="btn btn-default pull-right" href="{{ url_for('messages.message_list', export='true', **request.args) }}">{% trans %}Export{% endtrans %}</a>
@@ -35,6 +35,7 @@
 
 <div class="row">
   <div class="col-md-12">
+    {{ render_pager_counter(pager, args) }}
     <table class="table table-striped table-bordered table-hover" style="table-layout:fixed">
       <thead >
         <tr>
