--- a/apollo/frontend/templates/frontend/participant_list.html
+++ b/apollo/frontend/templates/frontend/participant_list.html
@@ -1,6 +1,6 @@
 {%- extends 'frontend/_layout.html' -%}
 {%- from 'frontend/macros/participant_list_filter.html' import render_filter_form -%}
-{%- from 'frontend/macros/pagination.html' import render_pager -%}
+{%- from 'frontend/macros/pagination.html' import render_pager, render_pager_counter -%}
 {%- from 'frontend/macros/send_message.html' import send_message_modal -%}
 {% block toolbar %}
   {%- if perms.export_participants.can() -%}
@@ -29,7 +29,7 @@
 {%- endif -%}
     <div class="row-fluid">
       <div>
-
+        {{ render_pager_counter(participants, args) }}
         <form class="form-inline" action="{{ request.url }}" method="POST">
           {{ form.csrf_token() }}{{ form.select_superset() }}
           <!--<div class="checkbox" style="margin-left:10px;">
