provide the option to edit a participant within a modal dialog

--- a/apollo/frontend/templates/frontend/macros/participant_edit_form.html
+++ b/apollo/frontend/templates/frontend/macros/participant_edit_form.html
@@ -1,22 +1,25 @@
 {% macro render_edit_form(form) %}
-<form class="form-horizontal" method="POST">
+<form class="form-horizontal" method="POST" action='{{ request.url }}'>
 {{ form.hidden_tag() }}
-<fieldset>
-<legend>{% trans %}Edit participant{% endtrans %}</legend>
 {%- for field in form -%}
 {%- if field.type != 'CSRFTokenField' -%}
 <div class="form-group {% if field.errors %}has-error{% endif %}">
-{{ field.label }}
-{{ field(class_='form-control') }}
-{% if field.errors %}
-{% for e in field.errors %}
-<p class="help-block">{{ e }}</p>
-{% endfor %}
-{% endif %}
+    {{ field.label(class_='col-sm-2 control-label') }}
+    <div class="col-sm-6">
+        {{ field(class_='form-control') }}
+        {% if field.errors %}
+        {% for e in field.errors %}
+        <p class="help-block">{{ e }}</p>
+        {% endfor %}
+        {% endif %}
+    </div>
 </div>
 {%- endif -%}
 {%- endfor -%}
-<button class="btn btn-primary" type="submit">Save</button>
-</fieldset>
+<div class="form-group">
+    <div class="col-sm-offset-2 col-sm-6">
+        <button class="btn btn-primary btn-lg" type="submit">Save</button>
+    </div>
+</div>
 </form>
 {% endmacro %}
