--- a/apollo/frontend/templates/frontend/participant_edit.html
+++ b/apollo/frontend/templates/frontend/participant_edit.html
@@ -1,5 +1,8 @@
-{% extends 'frontend/_layout.html' %}{% from 'frontend/macros/participant_edit_form.html' import render_edit_form %}{% block content %}<div class="row">
-<div class="col-md-4 col-md-offset-4">
+{% extends 'frontend/_layout.html' %}{% from 'frontend/macros/participant_edit_form.html' import render_edit_form %}
+{% block content %}
+<div class="row">
+<div class="col-md-8 col-md-offset-2">
 {{ render_edit_form(form) }}
 </div>
-</div>{% endblock %}
+</div>
+{% endblock %}
